@@ -21,8 +21,8 @@ requires 'Error::Pure' => 0.18;
 requires 'Error::Pure::Utils' => 0.18;
 resources 'bugtracker' => 'https://rt.cpan.org/Public/Dist/Display.html'.
 	'?Name=Tie-Hash-Check';
-resources 'homepage' => 'https://github.com/tupinek/Tie-Hash-Check';
-resources 'repository' => 'git://github.com/tupinek/Tie-Hash-Check';
+resources 'homepage' => 'https://github.com/michal-josef-spacek/Tie-Hash-Check';
+resources 'repository' => 'git://github.com/michal-josef-spacek/Tie-Hash-Check';
 test_requires 'English' => 0;
 test_requires 'Test::More' => 0;
 test_requires 'Test::NoWarnings' => 0;
